# car-sales

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/car_dealer/source/car_dealer/: .coverage  manage.py  pytest.ini
backend/car_dealer/source/car_dealer/car/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/car_dealer/source/car_dealer/car/migrations/: 0001_initial.py  0002_alter_car_display.py  0003_alter_car_publishing_date.py
backend/car_dealer/source/car_dealer/car/tests/: test_car.py
backend/car_dealer/source/car_dealer/car_dealer/: asgi.py  urls.py  wsgi.py
backend/car_dealer/source/car_dealer/car_dealer/settings/: base.py  testing.py
docs/: BR.md  TD.md
